--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -26,6 +26,7 @@
         <KeyBinding Modifiers="Control" Key="Up" Command="{Binding MoveHrSelectionCommand}" CommandParameter="{StaticResource True}" />
         <KeyBinding Modifiers="Control" Key="Down" Command="{Binding MoveHrSelectionCommand}" CommandParameter="{StaticResource False}" />
     </UserControl.InputBindings>
+    <!--DataContext is AppointmentViewModel-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
