--- a/Diagnosis.App/Controls/Card/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/Card/HealthRecord.xaml
@@ -11,6 +11,8 @@
              Background="Transparent"
              Focusable="True"
              IsTabStop="True">
+    
+    <!--DataContext is HealthRecordViewModel-->
     <Grid Style="{StaticResource gridIsDirty}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -54,7 +56,7 @@
                     <Run Text="{Binding Name, Mode=OneWay}" />
                     <Run Text="{Binding NumValue, StringFormat={}{0:G6}, ConverterCulture=ru-RU}" />
                 </TextBlock>
-                <TextBlock Grid.Column="1" Text="{Binding Diagnosis.Code, FallbackValue=''}" />
+                <TextBlock Grid.Column="1" Text="{Binding Diagnosis.Code, FallbackValue=''}" Visibility="{Binding ShowDiagnosis, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 <TextBlock Grid.Row="1" Visibility="{Binding DateOffset.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
                     <Run Text="{Binding DateOffset.Offset}" />
                     <Run Text="{Binding DateOffset, Mode=OneWay, Converter={StaticResource DateOffsetToUnitLabel}}" />
