fix SearchTree lost focus

--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -54,6 +54,7 @@
 
             <TextBox x:Name="input"
                      Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}"
+                     controls:FocusExtension.IsFocused="{Binding IsSearchFocused, Mode=TwoWay}"
                      PreviewKeyDown="input_PreviewKeyDown"
                      GotMouseCapture="input_GotMouseCapture"
                      LostFocus="input_LostFocus">
@@ -73,7 +74,7 @@
         </Grid>
 
         <Popup x:Name="popup"
-               IsOpen="{Binding IsResultsVisible, Mode=TwoWay}"
+               IsOpen="{Binding IsResultsVisible, Mode=TwoWay}"               
                PlacementTarget="{Binding ElementName=input, Mode=OneWay}">
             <TreeView x:Name="results"
                 Style="{StaticResource TreeViewStyle}"
