--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -4,8 +4,7 @@
              xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
-             Startup="Application_Startup"
-             StartupUri="Windows/MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
         <conv:IHierarchicalCheckableToBackground x:Key="IHierarchicalCheckableToBackground" />
         <conv:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
