--- a/Diagnosis.App/Windows/DebugWindow.xaml
+++ b/Diagnosis.App/Windows/DebugWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="Manual" ShowInTaskbar="False" ShowActivated="False"
+        WindowStartupLocation="Manual" ShowInTaskbar="False" ShowActivated="False" Topmost="True"
         Title="Debug" Width="450">
     <Grid>
         <TextBox ScrollViewer.VerticalScrollBarVisibility="Auto" 
