--- a/Diagnosis.App/Controls/Directory/FullTree.xaml
+++ b/Diagnosis.App/Controls/Directory/FullTree.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.FullTree"
+﻿<controls:TreeCommon x:Class="Diagnosis.App.Controls.FullTree"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,47 +7,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
+    <controls:TreeCommon.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../../Styles/TreeStyle.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-
-            <InputBindingCollection x:Shared="False" x:Key="InputBindings">
-                <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
-                <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
-                <KeyBinding Key="Enter" Command="{Binding Editable.CommitCommand}" />
-                <KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />
-                <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
-                <KeyBinding Key="Insert" Command="{Binding Search.ToggleSearchActiveCommand}" />
-                <KeyBinding Key="F" Modifiers="Control" Command="{Binding Search.ToggleSearchActiveCommand}" />
-
-                <MouseBinding MouseAction="LeftClick" Command="{Binding ToggleCommand}" />
-                <MouseBinding MouseAction="RightClick" Command="{Binding Editable.EditCommand}" />
-            </InputBindingCollection>
-
-            <Style x:Key="fullTreeItemContainerStyle"
-                   TargetType="TreeViewItem"
-                   BasedOn="{StaticResource TreeViewItemStyle}">
-                <Setter Property="Template" Value="{StaticResource treeViewItemControl}" />
-                <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-                <Setter Property="controls:Attached.InputBindings" Value="{StaticResource InputBindings}" />
-            </Style>
-
+                <ResourceDictionary Source="EditableTreeStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>                 
+          
             <HierarchicalDataTemplate
                 x:Key="fullTreeItemTemplate"
                 ItemsSource="{Binding Children}">
-                <controls:TreeItemLight />
+                <ContentControl Content="{Binding}" Style="{StaticResource TreeItemTemplateStyle}" />
             </HierarchicalDataTemplate>
         </ResourceDictionary>
-    </UserControl.Resources>
+    </controls:TreeCommon.Resources>
     <Grid>
         <TreeView
             x:Name="tree"
             Style="{StaticResource TreeViewStyle}"
-            ItemContainerStyle="{StaticResource fullTreeItemContainerStyle}"
+            ItemContainerStyle="{StaticResource TreeItemContainerStyle}"
             ItemTemplate="{StaticResource fullTreeItemTemplate}"
             ItemsSource="{Binding}">
         </TreeView>
     </Grid>
-</UserControl>
+</controls:TreeCommon>
