--- a/Diagnosis.App/Controls/Directory/TilesViewer.xaml
+++ b/Diagnosis.App/Controls/Directory/TilesViewer.xaml
@@ -26,8 +26,7 @@
             <Button x:Name="up"
                     Content="↑"
                     Command="{Binding GoUp, Mode=OneWay}"
-                    Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}"
- />
+                    Style="{StaticResource squareButton}" />
 
             <ItemsControl x:Name="breadcrumbs"
                 ItemsSource="{Binding Breadcrumbs}">
