--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -99,15 +99,13 @@
             <StackPanel.Resources>
                 <Style TargetType="Button">
                     <Setter Property="Margin" Value="0,0,0,10" />
-                    <!--<Setter Property="Padding" Value="3" />-->
-                    <!--<Setter Property="Height" Value="23" />-->
+                    <Setter Property="Height" Value="23" />
                     <Setter Property="HorizontalContentAlignment" Value="Left" />
                 </Style>
                 <Style TargetType="Image">
                     <Setter Property="Margin" Value="0,0,5,0" />
                     <Setter Property="SnapsToDevicePixels" Value="True" />
-                    <!--<Setter Property="Padding" Value="3" />-->
-                    <!--<Setter Property="Height" Value="23" />-->
+                    <Setter Property="Height" Value="16" />
                 </Style>
             </StackPanel.Resources>
 
