--- a/Diagnosis.App/Controls/Directory/EditableTreeStyle.xaml
+++ b/Diagnosis.App/Controls/Directory/EditableTreeStyle.xaml
@@ -15,7 +15,6 @@
         <KeyBinding Key="F" Modifiers="Control" Command="{Binding Search.ToggleSearchActiveCommand}" />
 
         <MouseBinding MouseAction="LeftClick" Command="{Binding ToggleCommand}" />
-        <MouseBinding MouseAction="RightClick" Command="{Binding Editable.EditCommand}" />
     </InputBindingCollection>
 
     <Style  x:Key="TreeItemContainerStyle"
@@ -23,6 +22,7 @@
                     BasedOn="{StaticResource TreeViewItemStyle}">
         <Setter Property="Template" Value="{StaticResource treeViewItemControl}" />
         <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+        <Setter Property="IsExpanded" Value="{Binding IsExpanded}" />
         <Setter Property="controls:Attached.InputBindings" Value="{StaticResource InputBindings}" />
     </Style>
     
